# latex-formatter-for-katex

./: README.md  ejemplo.mdx  ejemplo.tex  pyproject.toml  test_example.py  test_output.txt
src/: __init__.py  box_converter.py  math_converter.py  parser.py  structure_converter.py  tikz_converter.py
